add analytics plugin

--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
     "composer/installers": "v1.0.12",
     "vlucas/phpdotenv": "~1.0.6",
     "wpackagist-plugin/better-wp-security" : "4.0.19",
+    "wpackagist-plugin/google-analytics-for-wordpress" : "4.3.5",
     "wpackagist-plugin/advanced-custom-fields" : "4.3.5",
     "wpackagist-plugin/wordpress-seo": "1.5.2.6",
     "wpackagist-plugin/wordpress-importer": "0.6.1"
