--- a/composer.json
+++ b/composer.json
@@ -42,11 +42,11 @@
       "type": "package",
       "package": {
         "name": "wordpress/wordpress",
-        "version": "3.8.2",
+        "version": "3.9.1",
         "type": "webroot",
         "dist": {
           "type": "zip",
-          "url": "https://github.com/WordPress/WordPress/archive/3.8.2.zip"
+          "url": "https://github.com/WordPress/WordPress/archive/3.9.1.zip"
         },
         "require" : {
           "fancyguy/webroot-installer": "1.1.0"
@@ -56,14 +56,14 @@
   ],
   "require": {
     "php": ">=5.3.2",
-    "wordpress/wordpress": "3.8.2",
+    "wordpress/wordpress": "3.9.1",
     "fancyguy/webroot-installer": "1.1.0",
     "composer/installers": "v1.0.12",
     "vlucas/phpdotenv": "~1.0.6",
-    "wpackagist-plugin/better-wp-security" : "4.0.19",
+    "wpackagist-plugin/better-wp-security" : "4.2.x",
     "wpackagist-plugin/google-analytics-for-wordpress" : "4.3.5",
-    "wpackagist-plugin/advanced-custom-fields" : "4.3.5",
-    "wpackagist-plugin/wordpress-seo": "1.5.2.6",
+    "wpackagist-plugin/advanced-custom-fields" : "4.3.x",
+    "wpackagist-plugin/wordpress-seo": "~1.5.3.3",
     "wpackagist-plugin/wordpress-importer": "0.6.1"
   },
   "extra": {
