--- a/composer.json
+++ b/composer.json
@@ -60,11 +60,13 @@
     "fancyguy/webroot-installer": "1.1.0",
     "composer/installers": "v1.0.12",
     "vlucas/phpdotenv": "~1.0.6",
-    "wpackagist-plugin/better-wp-security" : "4.2.x",
+    "wpackagist-plugin/better-wp-security" : "4.3.x",
     "wpackagist-plugin/google-analytics-for-wordpress" : "4.3.5",
     "wpackagist-plugin/advanced-custom-fields" : "4.3.x",
-    "wpackagist-plugin/wordpress-seo": "~1.5.3.3",
-    "wpackagist-plugin/wordpress-importer": "0.6.1"
+    "wpackagist-plugin/wordpress-seo": "1.5.x",
+    "wpackagist-plugin/wordpress-importer": "0.6.1",
+    "wpackagist-plugin/iwp-client": "~1.3",
+    "wpackagist-plugin/wp-super-cache": "1.4.x"
   },
   "extra": {
     "installer-paths": {
