--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,8 @@
     "wpackagist-plugin/wordpress-seo": "1.5.x",
     "wpackagist-plugin/wordpress-importer": "0.6.1",
     "wpackagist-plugin/iwp-client": "~1.3",
-    "wpackagist-plugin/wp-super-cache": "1.4.x"
+    "wpackagist-plugin/wp-super-cache": "1.4.x",
+    "wpackagist-plugin/bruteprotect": "2.2.x"
   },
   "extra": {
     "installer-paths": {
